Bug 292780 - Kontact/Akregator crash on moving to next unread article
Summary: Kontact/Akregator crash on moving to next unread article
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-29 11:12 UTC by Andreas Karrenbauer
Modified: 2012-01-30 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Karrenbauer 2012-01-29 11:12:58 UTC
Application: kontact (4.8.0)
KDE Platform Version: 4.8.00 (4.8.0 "release 462"
Qt Version: 4.8.0
Operating System: Linux 3.1.0-1.2-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
I pressed the shortcut key for moving to the next unread article. However, this might have just triggered a bug: I noticed that some articles do not appear in the list of articles of all feeds but only when the particular feed is selected.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f2f98309760 (LWP 17595))]

Thread 3 (Thread 0x7f2f7fcf3700 (LWP 17596)):
#0  0x00007f2f90185e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f2f94b189dc in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007f2f94b18b09 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007f2f90181f05 in start_thread () from /lib64/libpthread.so.0
#4  0x00007f2f9582163d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f2f7f3f2700 (LWP 17597)):
#0  0x00007f2f95818523 in poll () from /lib64/libc.so.6
#1  0x00007f2f8fc72a98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f2f8fc72f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f2f95f8f956 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#4  0x00007f2f95f5f682 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#5  0x00007f2f95f5f8d7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#6  0x00007f2f95e60537 in QThread::exec() () from /usr/lib64/libQtCore.so.4
#7  0x00007f2f95e6355b in ?? () from /usr/lib64/libQtCore.so.4
#8  0x00007f2f90181f05 in start_thread () from /lib64/libpthread.so.0
#9  0x00007f2f9582163d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f2f98309760 (LWP 17595)):
[KCrash Handler]
#6  0x00007f2f30e5597f in Akregator::Article::description (this=<optimized out>) at /usr/src/debug/kdepim-4.8.0/akregator/src/article.cpp:454
#7  0x00007f2f312db2ad in Akregator::Filters::Criterion::satisfiedBy (this=0xb6118c0, article=<optimized out>) at /usr/src/debug/kdepim-4.8.0/akregator/src/articlematcher.cpp:164
#8  0x00007f2f312db6cc in Akregator::Filters::ArticleMatcher::anyCriterionMatches (this=<optimized out>, a=...) at /usr/src/debug/kdepim-4.8.0/akregator/src/articlematcher.cpp:312
#9  0x00007f2f312dd5fd in Akregator::ArticleModel::rowMatches (this=<optimized out>, row=<optimized out>, matcher=<optimized out>) at /usr/src/debug/kdepim-4.8.0/akregator/src/articlemodel.cpp:260
#10 0x00007f2f312ea06f in filterAcceptsRow (source_row=<optimized out>, this=<optimized out>, source_parent=<optimized out>) at /usr/src/debug/kdepim-4.8.0/akregator/src/articlelistview.cpp:82
#11 Akregator::SortColorizeProxyModel::filterAcceptsRow (this=0x4408b40, source_row=136, source_parent=<optimized out>) at /usr/src/debug/kdepim-4.8.0/akregator/src/articlelistview.cpp:75
#12 0x00007f2f96f23496 in ?? () from /usr/lib64/libQtGui.so.4
#13 0x00007f2f96f23801 in ?? () from /usr/lib64/libQtGui.so.4
#14 0x00007f2f96f239e1 in QSortFilterProxyModel::invalidateFilter() () from /usr/lib64/libQtGui.so.4
#15 0x00007f2f95f74761 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#16 0x00007f2f312e8042 in Akregator::SearchBar::signalSearch (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/kdepim-4.8.0/build/akregator/src/searchbar.moc:119
#17 0x00007f2f312e84d9 in Akregator::SearchBar::slotActivateSearch (this=0x124ed50) at /usr/src/debug/kdepim-4.8.0/akregator/src/searchbar.cpp:228
#18 0x00007f2f95f74761 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#19 0x00007f2f95f79659 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#20 0x00007f2f96973e84 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#21 0x00007f2f96978d03 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#22 0x00007f2f976b7786 in KApplication::notify (this=0x7fff0a965e40, receiver=0x124e698, event=0x7fff0a963740) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#23 0x00007f2f95f6089c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#24 0x00007f2f95f91708 in ?? () from /usr/lib64/libQtCore.so.4
#25 0x00007f2f95f8f0bd in ?? () from /usr/lib64/libQtCore.so.4
#26 0x00007f2f8fc7258d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#27 0x00007f2f8fc72d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#28 0x00007f2f8fc732c2 in g_main_loop_run () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f2f1d7754cb in gtk_dialog_run () from /usr/lib64/libgtk-x11-2.0.so.0
#30 0x00007f2f19a5b458 in NP_Initialize () from /usr/lib64/IcedTeaPlugin.so
#31 0x00007f2f9480e919 in ?? () from /usr/lib64/libQtWebKit.so.4
#32 0x00007f2f9480f840 in ?? () from /usr/lib64/libQtWebKit.so.4
#33 0x00007f2f946d48b4 in ?? () from /usr/lib64/libQtWebKit.so.4
#34 0x00007f2f946d2ac2 in ?? () from /usr/lib64/libQtWebKit.so.4
#35 0x00007f2f946d32bd in ?? () from /usr/lib64/libQtWebKit.so.4
#36 0x00007f2f942951cf in ?? () from /usr/lib64/libQtWebKit.so.4
#37 0x00007f2f94667f4d in ?? () from /usr/lib64/libQtWebKit.so.4
#38 0x00007f2f946531ea in ?? () from /usr/lib64/libQtWebKit.so.4
#39 0x00007f2f9466841c in ?? () from /usr/lib64/libQtWebKit.so.4
#40 0x00007f2f942b52af in ?? () from /usr/lib64/libQtWebKit.so.4
#41 0x00007f2f9404e5f6 in ?? () from /usr/lib64/libQtWebKit.so.4
#42 0x00007f2f94b55ede in ?? () from /usr/lib64/libQtWebKit.so.4
#43 0x00007f2f38016352 in ?? ()
#44 0x0000000000000006 in ?? ()
#45 0x00007f2f7c024578 in ?? ()
#46 0x00007f2f1f48a410 in ?? ()
#47 0x00007f2f7c028150 in ?? ()
#48 0x00007f2f38000bbf in ?? ()
#49 0x00007f2f7c1355f0 in ?? ()
#50 0x000000000000599b in ?? ()
#51 0x00007f2f9815befd in __tls_get_addr () from /lib64/ld-linux-x86-64.so.2
#52 0x00007f2f3800a000 in ?? ()
#53 0x00007f2f7f449a18 in ?? ()
#54 0x00007f2f7e177228 in ?? ()
#55 0x0000000000000000 in ?? ()

Reported using DrKonqi
Comment 1 Allen Winter 2012-01-30 17:15:10 UTC
Git commit c57ff8ad834e089b5551769b4633c7cdaf03737a by Allen Winter.
Committed on 30/01/2012 at 18:13.
Pushed by winterz into branch 'master'.

in satsifiedBy(), just return false if the article is empty (isNull).
MERGE: 4.8
FIXED-IN: 4.8.1

M  +6    -2    akregator/src/articlematcher.cpp

http://commits.kde.org/kdepim/c57ff8ad834e089b5551769b4633c7cdaf03737a
Comment 2 Allen Winter 2012-01-30 17:15:57 UTC
Git commit 80c14e25b51149dd11d9b5a8d56baa534f30f8ac by Allen Winter.
Committed on 30/01/2012 at 18:13.
Pushed by winterz into branch 'KDE/4.8'.

in satsifiedBy(), just return false if the article is empty (isNull).
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit c57ff8ad834e089b5551769b4633c7cdaf03737a)

M  +6    -2    akregator/src/articlematcher.cpp

http://commits.kde.org/kdepim/80c14e25b51149dd11d9b5a8d56baa534f30f8ac