in satsifiedBy(), just return false if the article is empty (isNull).

BUG: 292780
MERGE: 4.8
FIXED-IN: 4.8.1